tests/baselines/reference/for-inStatementsDestructuring4.errors.txt
for-inStatementsDestructuring4.ts(2,7): error TS2339: Property 'a' does not exist on type '"length" | "toString" | "toLocaleString" | "pop" | "push" | "concat" | "join" | "reverse" | "shift" | "slice" | "sort" | "splice" | "unshift" | "indexOf" | "lastIndexOf" | "every" | "some" | "forEach" | "map" | "filter" | "reduce" | "reduceRight"'.
for-inStatementsDestructuring4.ts(2,10): error TS2339: Property 'b' does not exist on type '"length" | "toString" | "toLocaleString" | "pop" | "push" | "concat" | "join" | "reverse" | "shift" | "slice" | "sort" | "splice" | "unshift" | "indexOf" | "lastIndexOf" | "every" | "some" | "forEach" | "map" | "filter" | "reduce" | "reduceRight"'.


==== for-inStatementsDestructuring4.ts (2 errors) ====
    var a, b;
    for ({a, b} in []) { }
          ~
!!! error TS2339: Property 'a' does not exist on type '"length" | "toString" | "toLocaleString" | "pop" | "push" | "concat" | "join" | "reverse" | "shift" | "slice" | "sort" | "splice" | "unshift" | "indexOf" | "lastIndexOf" | "every" | "some" | "forEach" | "map" | "filter" | "reduce" | "reduceRight"'.
             ~
!!! error TS2339: Property 'b' does not exist on type '"length" | "toString" | "toLocaleString" | "pop" | "push" | "concat" | "join" | "reverse" | "shift" | "slice" | "sort" | "splice" | "unshift" | "indexOf" | "lastIndexOf" | "every" | "some" | "forEach" | "map" | "filter" | "reduce" | "reduceRight"'.